# Stack-python

./: LICENSE  README.md  pyproject.toml  setup.py
stk/: __init__.py  stack
